--- a/presentations/week11/upload.html
+++ b/presentations/week11/upload.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Serif" rel="stylesheet">
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -24,6 +25,7 @@
     .itemButton{
       text-align: center;
       padding: 10px;
+      background-color: pink;
     }
 
     img {
@@ -33,12 +35,25 @@
 
     h1 {
       text-align: center;
+      color: pink;
+      font-family: 'IBM Plex Serif', serif;
+    }
+
+    li, ul {
+      display: inline-block;
+      text-align: center;
+      font-family: 'IBM Plex Serif', serif;
     }
 
     li {
-      display: in-line-block;
+      border-bottom: 1px black solid;
     }
-    
+
+    body {
+      text-align: center;
+      font-family: 'IBM Plex Serif', serif;
+    }
+
   </style>
 
   <!-- Bootstrap -->
@@ -51,9 +66,10 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.2/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+
 </head>
 
-<h1>Card Website</h1>
+<h1>Animals</h1>
 
 <body>
   <li>
