--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
                                         <li><a target="_blank" href="presentations/week10/upload.html">Presentation Week 10</a></li>
                                           <li><a target="_blank" href="presentations/week11/upload.html">Presentation Week 11</a></li>
                                           <li><a target="_blank" href="week12/animation.html">Class work week 12</a></li>
+                                          <li><a target="_blank" href="presentations/week12/upload.html">Presentation Week 12</a></li>
                                         <li><a target="_blank" href="OReilly_JavaScript_The_Good_Parts_May_2008.pdf">JavaScript</a></li>
 
                                     </ul>
